--- a/app/src/main/res/layout/fragment_album_list.xml
+++ b/app/src/main/res/layout/fragment_album_list.xml
@@ -19,7 +19,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/texto_albumes_lowcase"
         android:textAlignment="center"
-        android:textColor="@color/fontTextNormal"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
