--- a/app/src/main/res/layout/collector_item.xml
+++ b/app/src/main/res/layout/collector_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="5dp"
-        android:background="@color/backgroundButton"
+        android:background="@color/white"
         android:baselineAligned="false"
         android:gravity="center_vertical"
         android:orientation="horizontal">
