--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,11 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#BAC3E2</color>
     <color name="background_general">#151f36</color>
     <color name="background_clear">#26407C</color>
     <color name="fontOrange">#FFC107</color>
-    <color name="fontTextNormal">#DBDCE0</color>
     <color name="fontTextButton">#151f36</color>
-    <color name="backgroundButton">#DBDCE0</color>
     <color name="backgroungButton">#30374D</color>
 
 </resources>
