--- a/app/src/main/res/layout/fragment_album_create.xml
+++ b/app/src/main/res/layout/fragment_album_create.xml
@@ -43,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name_create_album"
+            android:textColorHint="@color/white"
             app:helperText="@string/required"
             app:helperTextTextColor="@color/fontOrange"
             app:counterEnabled="true"
@@ -65,6 +66,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/portada_create_album"
             app:helperText="@string/required"
+            android:textColorHint="@color/white"
             app:helperTextTextColor="@color/fontOrange"
             app:counterEnabled="true"
             app:counterMaxLength="100"
@@ -84,6 +86,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="@color/white"
             android:hint="@string/release_date_create_album"
             app:helperText="@string/required"
             app:helperTextTextColor="@color/fontOrange"
@@ -105,6 +108,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/description_create_album"
             app:helperText="@string/required"
+            android:textColorHint="@color/white"
             app:counterEnabled="true"
             app:counterMaxLength="200"
             app:helperTextTextColor="@color/fontOrange"
@@ -124,6 +128,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="@color/white"
             android:hint="@string/recordLabel_create_album"
             app:helperText="@string/required"
             app:helperTextTextColor="@color/fontOrange"
