Mejora accesabilidad de colores

--- a/app/src/main/res/layout/fragment_album_create.xml
+++ b/app/src/main/res/layout/fragment_album_create.xml
@@ -24,7 +24,7 @@
             android:fontFamily="sans-serif-medium"
             android:text="@string/create_album_label"
             android:textAlignment="center"
-            android:textColor="@color/fontTextNormal"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/name_create_album"
                 app:helperText="@string/required"
+                android:textColorHint="@color/white"
                 app:helperTextTextColor="@color/fontOrange"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
@@ -69,6 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/portada_create_album"
+                android:textColorHint="@color/white"
                 app:helperText="@string/required"
                 app:helperTextTextColor="@color/fontOrange"
                 app:counterEnabled="true"
@@ -88,6 +90,7 @@
                 android:id="@+id/tiReleaseDateCreateAlbum"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:textColorHint="@color/white"
                 android:layout_height="wrap_content"
                 android:hint="@string/release_date_create_album"
                 app:helperText="@string/required"
@@ -108,6 +111,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/white"
                 android:hint="@string/description_create_album"
                 app:helperText="@string/required"
                 app:counterEnabled="true"
@@ -131,6 +135,7 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp"
+                android:textColorHint="@color/white"
                 android:text="@string/recordLabel_create_album"
                 app:helperText="@string/required"
                 app:helperTextTextColor="@color/fontOrange"
